# Intro-to-Algorithms

P01 - memory mangement/: Alg proj1.docx  P01 - Memory Managment.docx  P1-Analysis.xlsx
P01 - memory mangement/pa01-memmgr-Matansegal/: Allocator.cpp  Allocator.h  AllocatorSingleton.cpp  AllocatorSingleton.h  AloMemory.h  BestFit.cpp  BestFit.h  BookKeepingNode.cpp  BookKeepingNode.h  CMakeLists.txt  FirstFit.cpp  FirstFit.h  MyFit.cpp  MyFit.h  README.md  global.cpp  global.h  main.cpp  myAllocator.h  test1.cpp  test1.h  test2.cpp  test2.h  test3.cpp  test3.h  test4.cpp  test4.h
P01 - memory mangement/pa01-memmgr-Matansegal/SentiAnalysis/: SentAnal.cpp  SentAnal.h  WordsFilter.cpp  WordsFilter.h  dsstring.cpp  dsstring.h  dsvector.h  porter2_stemmer.cpp  porter2_stemmer.h  readTest.cpp  readTest.h  readingfiles.cpp  readingfiles.h  word.cpp  word.h
P02 - Community discover/: Project 02.docx
P02 - Community discover/20s-pa02-Matansegal/: CMakeLists.txt  edge.h  file.txt  file2.txt  graph.h  graphNode.h  main.cpp  utilities.cpp  utilities.h
P03 - Kruskal's MST Algorithm/: PA03-analysis.xlsx  PA03_Analysis_Paper_Segal.docx  Project 3.docx  ~$oject 3.docx
P03 - Kruskal's MST Algorithm/20s-pa03-Matansegal/: CMakeLists.txt  disjointList.h  disjointListIndex.cpp  disjointListIndex.h  disjointTree.h  disjointTreeIndex.cpp  disjointTreeIndex.h  edge.h  index.cpp  index.h  main.cpp  preprocess.cpp  preprocess.h  utilities.cpp  utilities.h
P03 - Kruskal's MST Algorithm/20s-pa03-Matansegal/inputFiles/: graph10low.txt  graph50dens.txt  graph50low.txt
P03 - Kruskal's MST Algorithm/helpers/: graph100dens.txt  graph100low.txt  graph10dens.txt  graph200dens.txt  graph200low.txt  graph500dens.txt  graph500low.txt  textWriter.py
P04 - Euclidean algorithm/: P04_Segal (1).py  P04_Segal.html  README.md
P04 - Euclidean algorithm/.ipynb_checkpoints/: P04_Segal-checkpoint.ipynb
